tests/overloadedrecflds/should_compile/DRFPatSynExport_A.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE PatternSynonyms #-}
module DRFPatSynExport_A where
data S = MkS { m :: Int }
pattern MkT { m } = m
